<resources>
    <string name="app_name">mPet</string>
    <!--stringovi za izbornik-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="title_activity_login">Prijava</string>
    <!--stringovi za prijavu-->
    <string name="prijava">PRIJAVA</string>
    <string name="logo_mpet">Logo mPet</string>
    <string name="skeniraj">Skeniraj</string>
    <string name="registrirajte_se">registrirajte se.</string>
    <string name="ukoliko_nemate_aktiviran_profil">Ukoliko nemate aktiviran profil</string>
    <string name="odjava">Odjava</string>
    <string name="slika_korisnika">Slika korisnika</string>
    <string name="korisnicko_ime">Korisničko ime</string>
    <string name="Opis_prijave">Prijavite se u nastavku s postojećim korisničkim imenom i lozinkom.</string>
    <string name="lozinka">Lozinka</string>

    <string name="skeniranje_tekst">Približite uređaj NFC kartici</string>
    <string name="nfc_not_ok">Turn on NFC in your mobile device settings</string>
    <string name="deskriptor_nfc_ikone">Ikona NFC uređaja</string>
    <string name="poruka_upis_koda">Upišite kod ukoliko ne želite skenirati ogrlicu</string>
    <string name="hint_upis_koda">Kod ogrlice</string>
    <string name="gumb_unos_koda">Potvrdi</string>
    <string name="nfc_read_failed">Code reading error</string>
    <string name="nfc_read_ok">Code OK</string>

    <!--gumbi-->
    <string name="gumbSpremi">Spremi</string>
    <string name="gumbOdustani">Odustani</string>

    <!--stringovi za registraciju-->
    <string name="korIme">Korisničko ime</string>
    <string name="lozinkaReg">Lozinka</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="mail">e-mail</string>
    <string name="adresa">Adresa</string>
    <string name="tel">Broj telefona</string>
    <string name="mob">Broj mobitela</string>

    <!--stringovi za novog ljubimca-->
    <string name="odabir_spol">Spol</string>
    <string-array name="spolovi">
        <item>mužjak</item>
        <item>ženka</item>
    </string-array>
    <string name="imeLjub">Ime</string>
    <string name="vrsta">Vrsta</string>
    <string name="vrsta_opis">pas, mačka, …</string>
    <string name="masa">Masa</string>
    <string name="godRodjenja">Godina rođenja</string>
    <string name="opis">Opis</string>
    <string name="brisanje">Obriši</string>
    <string name="ukloniKarticu">Ukloni</string>
    <string name="savjetiLjubimac">Pritisnite na ljubimca ili gumb.</string>


    <string name="pet_age_label">Godine</string>
    <string name="pet_gender_label">Spol</string>
    <string name="kontakt_label">Kontakt podaci</string>
    <string name="kontakt_vlasnik">Vlasnik</string>
    <string name="kontakt_adresa">Adresa</string>
    <string name="kontakt_email">Email</string>
    <string name="kontakt_telefon">Broj telefona</string>
    <string name="kontakt_mobitel">Broj mobitela</string>

    <string name="hint_kontakt">Unesite kontakt podatak</string>
    <string name="odustani">Odustani</string>

    <string name="opis_app">Aplikacije je izrađena u svrhu predmeta Analiza i razvoj programa koji se izvodi na diplomskom studiju informatike te kao takva još nije predviđena za širu upotrebu. Ukratko aplikacija predstavlja način vođenja evidencije o kućnim ljubimcima. Osnovna funkcionalnost koju nudi je praćenje ljubimca putem NFC kartice. Korisniku je na raspolaganju također i skreniranje tuđih ljubimaca te slanje poruka vlasniku. Na ovaj način se može olakšati pronalazak ljubimca u slučaju da je nestao ili pobjegao.</string>
    <string name="odabir_unosa_koda_ogrlice">Odaberite željeni način unosa koda ogrlice u nastavku </string>
    <string name="provjera_odjave">Sigurno se želite odjaviti?</string>
    <string name="da">da</string>
    <string name="ne">ne</string>
    <string name="čekanje">Molimo pričekajte…</string>
    <string name="potrebno_korime">Potrebno je unijeti korisničko ime</string>
    <string name="potrebna_lozinka">Potrebno je unijeti lozinku</string>
    <string name="kor_podaci_krivi">Korisnicko ime ili lozinka su netocni</string>
    <string name="Pozdrav">Pozdrav!</string>

    <string name="u_redu">U redu</string>
    <string name="upozorenje">Upozorenje!</string>
    <string name="o_raz_timu">O razvojnom timu</string>
    <string name="o_app">O aplikaciji</string>

    <string name="AKL">Alen Kokotec-Lovrek</string>
    <string name="LK">Luka Košćak</string>
    <string name="MH">Matija Hasija</string>
    <string name="AP">Antonija Pofuk</string>
    <string name="rucni_unos">ručni unos</string>
    <string name="nfc_citac">pomoću NFC čitača</string>


    <!--Stringovi za prikaz svih obavijesti-->
    <string name="prikaz_svih_obavijesti_naslov">Prikaz svih obavijesti</string>
    <string name="prikaz_elementa_u_rview_sve_obavijesti">je bio/la skeniran/a!</string>
    <string name="nema_obavijesti">Nemate obavijesti!</string>

    <!--Stringovi za prikaz detaljne obavijesti-->
    <string name="prikaz_detalja_obavijesti">Detalji o obavijesti</string>
    <string name="google_mapa_tekst">je skeniran/a ovdje!</string>
    <string name="ime_ljubimca">Ime ljubimca:</string>
    <string name="datum_vrijeme_skeniranja">Datum i vrijeme:</string>
    <string name="korisnik_skenirao">Skenirao:</string>
    <string name="mjesto_skeniranja">Mjesto:</string>
    <string name="kontakt_podaci_skeniranje">Kontakt:</string>

    <!--Stringovi u pozadinskoj obavijesti-->
    <string name="pozadinska_obavijest_naslov">Netko je skenirao vašeg ljubimca!</string>

</resources>

