<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="238dp"
        />


    <TextView
        android:id="@+id/lblPetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ime_ljubimca"
        android:layout_below="@+id/mapView"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/lblScanDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datum_vrijeme_skeniranja"
        android:layout_below="@+id/lblPetName"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/lblUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/korisnik_skenirao"
        android:layout_below="@+id/lblScanDateTime"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/lblScanPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mjesto_skeniranja"
        android:layout_below="@+id/lblUser"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/lblUserContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kontakt_podaci_skeniranje"
        android:layout_below="@+id/lblScanPlace"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/txtPetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lblPetName"
        android:layout_below="@id/mapView"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/txtScanDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lblScanDateTime"
        android:layout_below="@id/txtPetName"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/txtUserWhoScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lblUser"
        android:layout_below="@id/txtScanDateTime"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/txtScanPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lblScanPlace"
        android:layout_below="@id/txtUserWhoScan"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/txtUserContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtScanPlace"
        android:layout_margin="10dp"
        android:layout_marginStart="81dp"
        android:layout_toEndOf="@+id/lblUserContact"
        android:layout_toRightOf="@+id/lblScanPlace"
        android:textColor="@color/black"
        android:textSize="18dp"
        />

    <ProgressBar
        android:id="@+id/progressBarNotificationDetail"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>