<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="157dp"
        android:fontFamily="@font/robotoblack"
        android:text="@string/imeLjub" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/robotoblack"
        android:text="NAPOMENA: bit će uklonjena i sva skeniranja kartice!" />


    <Button
        android:id="@+id/btnBrisanjeKarticeSpremi"
        android:layout_width="109dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="85dp"
        android:background="#8492A6"
        android:fontFamily="@font/chewyregular"
        android:text="@string/ukloniKarticu"
        android:textColor="#e60000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnBrisanjeKarticeOdustani"
        android:layout_width="109dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="86dp"
        android:background="#8492A6"
        android:fontFamily="@font/chewyregular"
        android:text="@string/gumbOdustani"
        android:textColor="#FFCB57"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:text="Želite li ukloniti karticu s odabranog ljubimca?" />

    <TextView
        android:id="@+id/txtImeLjubimca"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="158dp"
        android:layout_toEndOf="@+id/textView"
        android:text="" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="233dp"
        android:layout_height="117dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="198dp"
        app:srcCompat="@drawable/close_icon" />


</RelativeLayout>